--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <section id="about">
             <h2><center>About Me</center></h2>
-            <p>Hello, I'm Ayush, a passionate computer science student at Western University. I have a particular interest in robotics. I enjoy building robots by hand and programming them using Arduinos and Raspberry Pi's. I love to work on projects that will automate tasks and help those with mental and phyiscal impairments. I am adept at programming with C++, Python, and Javascript, I able to work with HTML, and CSS too.</p>
+            <p>Hello, I'm Ayush, a passionate computer science student at Western University. I have a particular interest in robotics. I enjoy building robots by hand and programming them using Arduinos and Raspberry Pi's. I love to work on projects that will automate tasks and help those with mental and physical impairments. I am adept at programming with C++, Python, and Javascript, I'm able to work with HTML, and CSS too.</p>
         </section>
 
         <div class="sections">
@@ -195,7 +195,7 @@
                         <img src="calc.png" alt="ss of calc">
                         <div class="project-info">
                             <h3>The Boring Calculator</h3>
-                            <p>This project was created to be used as a chrome extension calculator for homework that met the expectations set by the university of my client in their Calculus program. It was made to be used to do homework as my client did not wish to constantly carry a caculator around but wished to have experience with a non-scientific calculator to prepare for tests.</p>
+                            <p>This project was created to be used as a chrome extension calculator for homework that met the expectations set by the university of my client in their Calculus program. It was made to be used to do homework as my client did not wish to constantly carry a calculato around but wished to have experience with a non-scientific calculator to prepare for tests.</p>
                         </div>
                     </div>
                     <div class="project">
@@ -240,7 +240,7 @@
                         <img src="img8.jpg" alt="criket essay">
                         <div class="project-info">
                             <h3>Literature</h3>
-                            <p>Literature has always held a deep place in my heart. In grade 11 I recieved an Honourable Mention Distinction in from OSCA for an essay pertaining to Cricket and The Crown. Currently, I continue to write poetry and essays regarding my passions when possible.</p>
+                            <p>Literature has always held a deep place in my heart. In grade 11 I received an Honourable Mention Distinction in from OSCA for an essay pertaining to Cricket and The Crown. Currently, I continue to write poetry and essays regarding my passions when possible.</p>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                         <img src="img10.jpg" alt="sauga">
                         <div class="project-info">
                             <h3>City Of Mississauga Volunteer (2022-2022)</h3>
-                            <p>In 2022 I had volunteered for the city of Mississauga as a VIP volunteer on two occasions (Canada day & Reconcilliation Day), where I guided guests to different areas and assisted with refreshments along with backstage support.</p>
+                            <p>In 2022 I had volunteered for the city of Mississauga as a VIP volunteer on two occasions (Canada day & Reconciliation  Day), where I guided guests to different areas and assisted with refreshments along with backstage support.</p>
                         </div>
                     </div>
                 </div>      
