--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <img src="img7.PNG" alt="Martial Arts">
                         <div class="project-info">
                             <h3>Wrestling</h3>
-                            <p>In highschool I enjoyed wrestling. It was both a phyiscally and mentally demanding sport. It required an individual to think on the spot while also being athletic enough to carry out whatever plans were previously conceived.</p>
+                            <p>In highschool I enjoyed wrestling. It was both a physically and mentally demanding sport. It required an individual to think on the spot while also being athletic enough to carry out whatever plans were previously conceived.</p>
                         </div>
                     </div>
                     <div class="project">
