--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <img src="calc.png" alt="ss of calc">
                         <div class="project-info">
                             <h3>The Boring Calculator</h3>
-                            <p>This project was created to be used as a chrome extension calculator for homework that met the expectations set by the university of my client in their Calculus program. It was made to be used to do homework as my client did not wish to constantly carry a calculato around but wished to have experience with a non-scientific calculator to prepare for tests.</p>
+                            <p>This project was created to be used as a chrome extension calculator for homework that met the expectations set by the university of my client in their Calculus program. It was made to be used to do homework as my client did not wish to constantly carry a calculator around but wished to have experience with a non-scientific calculator to prepare for tests.</p>
                         </div>
                     </div>
                     <div class="project">
