--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container">
         <header id="home">
             <h1>Ayush Parekh</h1>
-            <p class="subtitle">Robotics Enthusiast | Computer Science Student @ UWO | Vintage Tech fanatic</p>
+            <p class="subtitle">Robotics Enthusiast | Computer Science Student @ UWO | Vintage Tech Fanatic</p>
         </header>
 
         <section id="about">
