--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayush Parekh's Personal Portfolio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="AP.png" />
+
     <style>
         body, html {
             margin: 0;
