--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayush Parekh's Personal Portfolio</title>
     <link rel="shortcut icon" type="image/x-icon" href="AP.png" />
-
     <style>
         body, html {
             margin: 0;
@@ -30,7 +29,7 @@
         }
         .subtitle {
             font-size: 1.2em;
-            color: #b0b0b0;
+            color: #ffffff;
         }
         nav {
             background-color: #1e1e1e;
@@ -336,7 +335,7 @@
             }
         }
 
-        // Toggle Work section
+        //  Work section
         function toggleworkSection() {
             var workSection = document.getElementById('workDetailed');
             if (workSection.style.display === 'none' || workSection.style.display === '') {
