--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     <div class="container">
         <header id="home">
             <h1>Ayush Parekh</h1>
-            <p class="subtitle">Robotics Enthusiast | Computer Science Student @ UWO | Vintage Tech Fanatic</p>
+            <p class="subtitle">Robotics Enthusiast | Computer Science Student @ UWO | Vintage Tech fanatic</p>
         </header>
 
         <section id="about">
             <h2><center>About Me</center></h2>
-            <p>Hello, I'm Ayush, a passionate computer science student at Western University. I have a particular interest in robotics. I enjoy building robots by hand and programming them using Arduinos and Raspberry Pi's. I love to work on projects that will automate tasks and help those with mental and phyiscal impairments. I am adept at programming with C++, Python, and Javascript, I able to work with HTML, and CSS too.</p>
+            <p>Hello, I'm Ayush, a passionate computer science student at Western University. I have a particular interest in robotics. I enjoy building robots by hand and programming them using Arduinos and Raspberry Pi's. I love to work on projects that will automate tasks and help those with mental and physical impairments. I am adept at programming with C++, Python, and Javascript, I'm able to work with HTML, and CSS too.</p>
         </section>
 
         <div class="sections">
@@ -171,7 +171,7 @@
                         <img src="img1.PNG" alt="robot pic">
                         <div class="project-info">
                             <h3>CNE FIRST Robotics Off Season Event 4th place finish</h3>
-                            <p>At this event, my team of 3 and I took on the task of creating and designing a robot to perform the challenges set by FIRST Robotics. Our team had joined late into the process, though, we were able to design and program our robot in a little under a week. With the aid of FIRST Robotics mentors and Inverse Paradox we were able to secure a fourth place finish.</p>
+                            <p>At this event, my team of 15 and I took on the task of creating and designing a robot to perform the challenges set by FIRST Robotics. Our team had joined late into the process, though, we were able to design and program our robot in a little under a week. With the aid of FIRST Robotics mentors and Inverse Paradox we were able to secure a fourth place finish.</p>
                         </div>
                     </div>
                     <div class="project">
@@ -240,14 +240,14 @@
                         <img src="img7.PNG" alt="Martial Arts">
                         <div class="project-info">
                             <h3>Wrestling</h3>
-                            <p>In highschool I enjoyed wrestling. It was both a phyiscally and mentally demanding sport. It required an individual to think on the spot while also being athletic enough to carry out whatever plans were previously conceived.</p>
+                            <p>In highschool I enjoyed wrestling. It was both a physically and mentally demanding sport. It required an individual to think on the spot while also being athletic enough to carry out whatever plans were previously conceived.</p>
                         </div>
                     </div>
                     <div class="project">
                         <img src="img8.jpg" alt="criket essay">
                         <div class="project-info">
                             <h3>Literature</h3>
-                            <p>Literature has always held a deep place in my heart. In grade 11 I recieved an Honourable Mention Distinction in from OSCA for an essay pertaining to Cricket and The Crown. Currently, I continue to write poetry and essays regarding my passions when possible.</p>
+                            <p>Literature has always held a deep place in my heart. In grade 11 I received an Honourable Mention Distinction in from OSCA for an essay pertaining to Cricket and The Crown. Currently, I continue to write poetry and essays regarding my passions when possible.</p>
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                         <img src="img10.jpg" alt="sauga">
                         <div class="project-info">
                             <h3>City Of Mississauga Volunteer (2022-2022)</h3>
-                            <p>In 2022 I had volunteered for the city of Mississauga as a VIP volunteer on two occasions (Canada day & Reconcilliation Day), where I guided guests to different areas and assisted with refreshments along with backstage support.</p>
+                            <p>In 2022 I had volunteered for the city of Mississauga as a VIP volunteer on two occasions (Canada day & Reconciliation Day), where I guided guests to different areas and assisted with refreshments along with backstage support.</p>
                         </div>
                     </div>
                 </div>      
@@ -335,7 +335,7 @@
             }
         }
 
-        //  Work section
+        // Toggle Work section
         function toggleworkSection() {
             var workSection = document.getElementById('workDetailed');
             if (workSection.style.display === 'none' || workSection.style.display === '') {
