--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
     <p>Hello, I'm <b>Ayush</b>, a second year computer science student at <b>Western University</b>.</p>
 
-    <p>I doing embedded programming with microcontrollers like the Raspberry Pi Pico W. I started working with robots in the summer of grade 11 and have been obsessed ever since. I love to create projects that automate tasks and help people.</p>
+    <p>I am doing embedded programming with microcontrollers like the Raspberry Pi Pico W. I started working with robots in the summer of grade 11 and have been obsessed ever since. I love to create projects that automate tasks and help people.</p>
 
     <p>I enjoy working with both software and hardware. I enjoy using microcontrollers to automate tasks and experiment with designing and soldering. I have a projects section dedicated to what I have built so far.</p>
 
