--- a/work.html
+++ b/work.html
@@ -104,7 +104,7 @@
         <li>Survey for the OBA Foundation Chief Justice of Ontario Fellowship in Legal Ethics and Professionalism Studies (“Fellowship in Studies”) 2024-25
           <ul>
             <li>Created posters to advertise the survey and created the Google Form which the data was collected from (47+ responses)</li>
-            <li>Contributed a section on ethical use of AI in law in a research study</li>
+            <li>Contributed a section on ethical use of AI in law in the research study</li>
           </ul>
         </li>
         <li>Data entry by docketing cases using PCLAW to docket emails and Microsoft Teams Meetings</li>
