--- a/projects.html
+++ b/projects.html
@@ -56,12 +56,11 @@
       border: 2px solid #000080;
     }
 
-    /* NEW: Full-width image style */
     .image {
       padding: 10px;
     }
 
-    .image img {
+    .image img, .image video {
       width: 100%;
       height: auto;
       border: 2px solid #000080;
@@ -74,10 +73,11 @@
   <div class="content-wrapper">
     <h1>Projects</h1>
 
+    <!-- DIGITAL CAMERA -->
     <div class="section" id="camera">
       <h2><center>Digital Camera</center></h2>
       <p>
-        I created my own digital camera using a webcam, battery pack, keypad, and a Raspberry Pi 3B+. I used fswebcam and a plethora of libraries in order to create a script that allows me to create a functional digital camera with a retro pixelated mode, outdoors mode, and normal mode. I control the camera's interface with the keypad and use the flash on top of the webcam to determine when the process of taking a photo has been completed. I power the camera with a battery pack I had found inside of my house. The python script runs off of boot by creating a systemd service file.
+        I created my own digital camera using a webcam, battery pack, keypad, and a Raspberry Pi 3B+. I used fswebcam and various libraries to create a script that captures images in multiple modes: retro pixelated, outdoor, and standard. The keypad controls the camera interface, and the webcam flash signals when the photo process is complete. A battery pack powers the entire device, and a systemd service ensures the Python script launches automatically on boot.
       </p>
       <div class="images">
         <img src="camera.png" alt="Digital Camera 1" />
@@ -85,10 +85,11 @@
       </div>
     </div>
 
+    <!-- DOCKETING TOOL -->
     <div class="section" id="docketing">
       <h2><center>Docketing Tool</center></h2>
       <p>
-        One of my tasks during my internship was to automate the docketing process. Docketing referred to documenting the time taken per task in the form of an Excel file that is parsed through and a rate of pay per task is determined. For this project, I created a GMail to Microsoft Excel Python script that elevated productivity and reduced workload by 25%. It has three search fields, a gmail account finder, key word finder, and a date range finder. This allowed for precise searching to occur and the specific time periods of docketing to be processed. After the search fields are inputted, the data is parsed and formatted into an Excel document that is downloaded onto the users computer. It has a .exe file and as such there is no set up process. 
+        During my internship, one of my tasks was to automate the docketing process. Docketing involves documenting time spent on tasks and formatting it into an Excel file. I built a Python tool that integrates Gmail search, keyword filtering, and date ranges. The script parses emails, extracts relevant data, and exports a neatly formatted Excel file. It also includes a standalone .exe version requiring no setup from the end user.
       </p>
       <div class="images">
         <img src="parser.png" alt="Docketing Tool Image 1" />
@@ -96,13 +97,39 @@
       </div>
     </div>
 
+    <!-- HOME SERVER -->
     <div class="section" id="server">
       <h2><center>Home Server</center></h2>
       <p>
-        I use an ACE PC T11 mini PC running Ubuntu 24.04.2 LTS in order to run the server which I access through SSH. I have docker and portainer set up. From that, I set up an AD blocker, a VPN, and a Password Manager. I will continue to learn about homelabbing in order to localize as many services as possible. My next addition will be a storage system that will backup the photos I take on my phone to an SSD. I had also set up a home server with a Raspberry Pi 3B+ running Ubuntu 24.04.2 LTS too and which I accessed though SSH. I switched over to a mini PC as I wished to use my Raspberry Pi for my digital camera project.
+        I run a home server on an ACEPC T11 Mini PC with Ubuntu 24.04.2 LTS, managed entirely through SSH. Using Docker and Portainer, I set up an ad blocker, VPN, and password manager. I also previously ran a similar setup on a Raspberry Pi 3B+, but later dedicated the Pi to my digital camera project. My next step is creating a local backup system that automatically saves phone photos to an SSD.
       </p>
       <div class="image">
         <img src="server.webp" alt="Home Server Image" />
+      </div>
+    </div>
+
+    <!-- HANDHELD TETRIS CONSOLE -->
+    <div class="section" id="tetris">
+      <h2><center>Handheld Tetris Console</center></h2>
+      <p>
+        I built a Tetris handheld video game console using a series of buttons, a live buzzer, a 0.96 inch OLED screen, and a RP2350 USB-A Microcontroller. I programmed the screen and the game logic along with wiring the whole unit. I plan to use a perf board along with a case that I am yet to salvage to adjust the form factor and increase the portability. 
+      </p>
+      <div class="image">
+        <img src="Handheld_Tetris.PNG" alt="Handheld Tetris Project" />
+      </div>
+    </div>
+
+    <!-- AUDIO AMPLIFIER -->
+    <div class="section" id="audio-amplifier">
+      <h2><center>Audio Amplifier</center></h2>
+      <p>
+        My best friend had bought a Vinyl Turntable that did not have built in potentiometer and used RCA connections. The speakers they had bought used live wire connections and thus the two were incompatible. The alternative of buying an audio amplifier on amazon was incredibly costly. As such, I used the CD player I previously purchased from a thrift store and salvaged the audio amplification circuit board that contained the TEA2025B IC and reused that. I also salvaged the live wire connectors and several potentiometers from the scrap electronics I've previously gathered. I then soldered some connections with the potentiometers and created a single unit. Thus, it was able to function as an audio amplifier. The board also contained a connector for FM and AM radio and as such it also inherited that capability. 
+      </p>
+      <div class="image">
+        <video controls>
+          <source src="audio_amplifier.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
 
