--- a/projects.html
+++ b/projects.html
@@ -125,15 +125,21 @@
       <p>
         My best friend had bought a Vinyl Turntable that did not have a built in potentiometer and used RCA connections. The speakers they had bought used live wire connections and thus the two were incompatible. The alternative of buying an audio amplifier on amazon was incredibly costly. As such, I used the CD player I previously purchased from a thrift store and salvaged the audio amplification circuit board that contained the TEA2025B IC and reused that. I also salvaged the live wire connectors and several potentiometers from the scrap electronics I've previously gathered. I then soldered some connections with the potentiometers and created a single unit. Thus, it was able to function as an audio amplifier. The board also contained a connector for FM and AM radio and as such it also inherited that capability. 
       </p>
-      <div class="image">
-        <video controls>
-          <source src="audio_amplifier.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </div>
+     <div class="image">
+    <iframe 
+      width="420" 
+      height="236" 
+      src="https://www.youtube.com/embed/oqi2nw2ZVKs" 
+      title="Audio Amplifier Demo"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
     </div>
 
   </div>
 </body>
 </html>
+
 
