--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
 
     <div class="work-entry">
       <div class="job-name">AM Law</div>
-      <div class="job-details">May 2025 - Present</div>
+      <div class="job-details">May 2025 - August 2025</div>
       <div class="job-title">Internship</div>
       <ul>
         <li>Created a Gmail to Microsoft Excel Python script that elevated productivity and reduced workload by 25%
@@ -116,3 +116,4 @@
 
 </body>
 </html>
+
