--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Work Experience - Ayush Parekh</title>
   <style>
     body {
@@ -116,4 +117,5 @@
 
 </body>
 </html>
+
 
