--- a/about.html
+++ b/about.html
@@ -66,17 +66,18 @@
 
     <p>Hello, I'm <b>Ayush</b>, a second year computer science student at <b>Western University</b>.</p>
 
-    <p>I am doing embedded programming with microcontrollers like the Raspberry Pi Pico W. I started working with robots in the summer of grade 11 and have been obsessed ever since. I love to create projects that automate tasks and help people.</p>
+    <p>I like doing embedded programming with microcontrollers like the Raspberry RP2350-USB-A. I started working with robots in the summer of grade 11 and have been obsessed ever since. I love to create projects that automate tasks and help people.</p>
 
     <p>I enjoy working with both software and hardware. I enjoy using microcontrollers to automate tasks and experiment with designing and soldering. I have a projects section dedicated to what I have built so far.</p>
 
-    <p>I am currently working on my own homelab in order to localize services and tasks that I can automate myself. I am using a Mini PC with a server version of Debian. I currently have a statistics page, a password manager, an ad blocker, and am working towards setting up a VPN. I really enjoy learning about networking and cybersecurity and hope to integrate my programming abilities to program my own Docker containers.</p>
+    <p>I am currently working on my own homelab in order to localize services and tasks that I can automate myself. I am using a Mini PC with a server version of Debian. I currently have a statistics page, a password manager, an ad blocker, a VPN, and a Plex Server. I really enjoy learning about networking and cybersecurity and hope to integrate my programming abilities to program my own Docker containers.</p>
 
-    <p>Beyond programming, I also enjoy fixing vintage technology, specifically radios. It is an arduous process but the result is well worth the effort. Straying away from technology, I also enjoy physical pursuits such as martial arts. I like wrestling and my favorite style is freestyle. Specifically, watching Yui Susaki compete is my favourite as her style is very technical.</p>
+    <p>Beyond programming, I also enjoy fixing vintage technology, specifically CD and Cassette players. It is an arduous process but the result is well worth the effort. Straying away from technology, I also enjoy physical pursuits such as martial arts. I currently do Judo and my favourite throw is Ippon seoi nage, I am still a white belt but hope to be promoted in a year!</p>
 
     <p>Feel free to explore this webpage and learn about my experience and projects!</p>
   </div>
 
 </body>
 </html>
+
 
