--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <div class = "windows-bar">
-        <a class = "item" id = "start-button">
-            <img src = "windows_icon.webp" alt="Windows Button">
-        </a>
-    </div>
+<div class="windows-bar">
+  <a class="item" id="start-button">
+    <img src="windows_icon.webp" alt="Windows Button">
+  </a>
+
+  <div class="taskbar-apps">
+    <button class="taskbar-app" data-app="about" title="About">
+      <img src="about.webp" alt="About">
+    </button>
+    <button class="taskbar-app" data-app="work" title="Work Experience">
+      <img src="proj.webp" alt="Work Experience">
+    </button>
+    <button class="taskbar-app" data-app="projects" title="Projects">
+      <img src="work.png" alt="Projects">
+    </button>
+    <button class="taskbar-app" data-app="contact" title="Contact">
+      <img src="linkedin.png" alt="Contact">
+    </button>
+  </div>
+</div>
+
 
 <div id="start-menu" class="unclicked start-menu">
   <div class="start-sidebar">
