--- a/projects.html
+++ b/projects.html
@@ -206,7 +206,7 @@
     <div class="section" id="clearhear">
 <h2><center>ClearHear – Accessible Notes From Audio<br>(Hack Western 12 Submission)</center></h2>
 
-      <h3>Inspiration</h3>
+      <h3>Inspiration: </h3>
       <p>
         ClearHear was inspired by the ongoing struggles faced by my best friend who is hard of hearing. 
         In class, she was unable to sufficiently focus because she had to take notes, read the board, and 
@@ -214,14 +214,14 @@
         taken for granted to be easy. I wanted to do something about it to address this injustice.
       </p>
 
-      <h3>What it does</h3>
+      <h3>What it does: </h3>
       <p>
         ClearHear takes audio files and outputs raw transcripts along with accessible notes using Gemini AI, 
         so that students who are hard of hearing or who face other disabilities can learn alongside their peers 
         without having to juggle multiple invisible tasks just to keep up.
       </p>
 
-      <h3>How I built it</h3>
+      <h3>How I built it: </h3>
       <p>
         I built ClearHear as a Streamlit web application using Python and Google Gemini. 
         Gemini performs transcription, tone indication, quotes from the speaker with timestamps, and structured note generation. 
@@ -230,7 +230,7 @@
         Finally, users can download the output as either a <code>.txt</code> or <code>.docx</code> file.
       </p>
 
-      <h3>Built With</h3>
+      <h3>Built with: </h3>
       <ul>
         <li>Python</li>
         <li>Streamlit</li>
@@ -259,3 +259,4 @@
   </div>
 </body>
 </html>
+
