--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
     <div class="section" id="docketing">
       <h2><center>Docketing Tool</center></h2>
       <p>
-        During my internship, one of my tasks was to automate the docketing process. Docketing involves documenting time spent on tasks and formatting it into an Excel file. I built a Python tool that integrates Gmail search, keyword filtering, and date ranges. The script parses emails, extracts relevant data, and exports a neatly formatted Excel file. It also includes a standalone .exe version requiring no setup from the end user.
+        During my summer internship, one of my tasks was to automate the docketing process at the law firm. Docketing involves documenting time spent per task and formatting it into an Excel file in order to create a bill. I built a Python tool that integrates Gmail search, keyword filtering, and date ranges. The script parses emails, extracts relevant data, and exports a neatly formatted Excel file. It also includes a standalone .exe version requiring no setup from the end user.
       </p>
       <div class="images">
         <img src="parser.png" alt="Docketing Tool Image 1" />
@@ -260,5 +260,6 @@
   </div>
 </body>
 </html>
+
 
 
