--- a/projects.html
+++ b/projects.html
@@ -186,8 +186,7 @@
       <p>
         I built a small audio amplifier circuit using salvaged components from older consumer electronics. 
         This project involved understanding amplifier ICs, power filtering, audio signal routing, and 
-        speaker output handling. After prototyping the circuit on a breadboard, I tested it with various 
-        audio sources. The video below demonstrates the amplifier powering a speaker with clean sound.
+        speaker output handling. I used a multimeter to test continuity and voltage. The video below demonstrates the amplifier powering a speaker with clean sound.
       </p>
       <div class="image">
         <iframe 
@@ -260,6 +259,7 @@
   </div>
 </body>
 </html>
+
 
 
 
