--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
     
     <img src="Pfp.jpg" alt="Ayush Profile Photo" class="profile-img" />
 
-    <p>Hello, I'm <b>Ayush</b>, a second year computer science student at <b>Western University</b>.</p>
+    <p>Hello, I'm <b>Ayush</b>, a second year student doing a major in <b>Computer Science </b>and a minor in <b>Game Development</b> at <b>Western University</b></p>
 
     <p>I like doing embedded programming with microcontrollers like the Raspberry RP2350-USB-A. I started working with robots in the summer of grade 11 and have been obsessed ever since. I love to create projects that automate tasks and help people.</p>
 
@@ -79,5 +79,6 @@
 
 </body>
 </html>
+
 
 
